--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "vite": "^4.0.0"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.6",
+    "bootstrap": "^5.2.3",
     "socket.io": "^4.5.4",
+    "socket.io-client": "^4.5.4",
     "vue": "^3.2.45"
   }
 }
