--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
+    "googleapis": "^109.0.1",
     "socket.io": "^4.5.4",
     "socket.io-client": "^4.5.4",
+    "tmi.js": "^1.8.5",
     "vue": "^3.2.45"
   }
 }
